openapiの定義を直しますね
